--- a/src/app/(payload)/custom.scss
+++ b/src/app/(payload)/custom.scss
@@ -16,3 +16,15 @@
     list-style-type: disc;
   }
 }
+
+:root {
+  --theme-text-50: rgb(from var(--theme-text) r g b / 0.5);
+  --theme-text-33: rgb(from var(--theme-text) r g b / 0.33);
+}
+
+.prose {
+  h1, h2, h3, h4, h5, h6 {
+    color: var(--theme-text);
+  }
+  color: var(--theme-text);
+}
